[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.pyright]
include = [ "bin/merjar", "src", "tests"]
exclude = [
    "**/__pycache__"
    ]
ignore = []

reportMissingImports = false
reportMissingTypeStubs = false

pythonVersion = "3.9"

executionEnvironments = [
  { root = "src" }
]


