[metadata]
name = merjar
version = 0.0.2
author = Denis Bueno
author_email = dbueno@gmail.com
description = Merge JARs safely
long_description = file: README.md
long_description_content_type = text/x-markdown
url = https://github.com/dbueno/merjar
project_urls =
    Bug Tracker = https://github.com/dbueno/merjar/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
scripts =
    bin/merjar

[options.packages.find]

[options.data_files]
    docs = *.md



